--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
       <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
-      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
-      <li><a href="https://covid19.nhs.uk/" class="govuk-link">Get the NHS COVID-19 app</a></li>
-      <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="https://www.ncsc.gov.uk" class="govuk-link">National Cyber Security Centre</a></li>
-      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
+      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
+      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
+      <li><a href="http://www.cookstown.gov.uk/" class="govuk-link">Cookstown District Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
+      <li><a href="http://www.whitehorsedc.gov.uk" class="govuk-link">Vale of White Horse District Council</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
