--- a/manual/alerts/expiring-api-tokens-in-signon.html
+++ b/manual/alerts/expiring-api-tokens-in-signon.html
@@ -10,23 +10,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>Signon app healthcheck not ok - GOV.UK Developer Documentation</title>
+    <title>Expiring API tokens in Signon - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/alerts/signon-app-healthcheck-not-ok.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/alerts/expiring-api-tokens-in-signon.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="Signon app healthcheck not ok - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/alerts/signon-app-healthcheck-not-ok.html" />
+      <meta name="twitter:title" content="Expiring API tokens in Signon - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/alerts/expiring-api-tokens-in-signon.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="Signon app healthcheck not ok" />
+      <meta property="og:title" content="Expiring API tokens in Signon" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/alerts/signon-app-healthcheck-not-ok.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/alerts/expiring-api-tokens-in-signon.html" />
 
     
   </head>
@@ -131,12 +131,7 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>Signon app healthcheck not ok</span></a>
-    <ul>
-      <li>
-        <a href="#rotating-api-tokens"><span>Rotating API Tokens</span></a>
-      </li>
-    </ul>
+    <a href="#header"><span>Expiring API tokens in Signon</span></a>
   </li>
 </ul>
 
@@ -151,18 +146,17 @@
       This page describes what to do in case of an
       <a href='https://docs.publishing.service.gov.uk/manual/tools.html#icinga'>Icinga alert</a>.
       For more information you could
-      <a href='https://github.com/alphagov/govuk-puppet/search?utf8=%E2%9C%93&q=signon-app-healthcheck-not-ok'>
+      <a href='https://github.com/alphagov/govuk-puppet/search?utf8=%E2%9C%93&q=expiring-api-tokens-in-signon'>
         search the govuk-puppet repo for the source of the alert
       </a>
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/c6c1cc819e7db95eed87e9be0aa697a56621c5e1">1 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/17eabd3b109275b78020b68cf78945f94ff523a7">20 Apr 2021</a>
 </div>
 
- <h1 id='header'>Signon app healthcheck not ok</h1> <p>See also: <a href="/manual/alerts/app-healthcheck-not-ok.html">how healthcheck alerts work on GOV.UK</a></p>
-<h2 id='rotating-api-tokens'>Rotating API Tokens</h2><p>One or more tokens for API Users are about to expire. You should rotate
+ <h1 id='header'>Expiring API tokens in Signon</h1> <p>One or more tokens for API Users are about to expire. You should rotate
 expiring tokens to ensure the associated application keeps working.</p>
 <p>As a working example, let&rsquo;s say we have an alert like <em>Content Publisher token
 for Publishing API expires in X days</em>. In this example, the API User is
@@ -233,8 +227,8 @@ that it picks up the new token from the environment.</p>
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/alerts/signon-app-healthcheck-not-ok.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Signon%20app%20healthcheck%20not%20ok'&amp;body=Problem%20with%20'Signon%20app%20healthcheck%20not%20ok'%20(https://docs.publishing.service.gov.uk/manual/alerts/signon-app-healthcheck-not-ok.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/alerts/expiring-api-tokens-in-signon.html.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Expiring%20API%20tokens%20in%20Signon'&amp;body=Problem%20with%20'Expiring%20API%20tokens%20in%20Signon'%20(https://docs.publishing.service.gov.uk/manual/alerts/expiring-api-tokens-in-signon.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
