--- a/manual/howto-switch-default-branch.html
+++ b/manual/howto-switch-default-branch.html
@@ -150,7 +150,7 @@
             
   <p><a href='/manual.html#github'>GitHub</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/ee7ff782741359707d917dd66c830a38d23a4a3a">3 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/d1c986c19930ff6e659830e1b3d02185ff1f0625">20 Apr 2021</a>
 </div>
 
  <h1 id='header'>How to switch a Git default branch from master to main</h1> <p>These steps are for switching the default branch of a repo to <code>main</code>.</p>
@@ -165,6 +165,7 @@
 <li>Switch under the dropdown for <code>GitHub repository default branch</code>.</li>
 </ul></li>
 <li><a href="https://docs.publishing.service.gov.uk/manual/test-and-build-a-project-on-jenkins-ci.html#fixing-the-build-number">Set the Jenkins build number</a>  (the last <code>master</code> build +1).</li>
+<li>Rebuild the latest <code>main</code> branch build which would have started automatically by Jenkins when the branch was renamed, but with the incorrect build number (and therefore is likely to have failed).</li>
 <li><a href="https://docs.github.com/en/github/administering-a-repository/renaming-a-branch#updating-a-local-clone-after-a-branch-name-changes">Switch your local branch</a>, otherwise you might rebase the wrong branch by mistake!</li>
 <li>Update the <a href="https://trello.com/c/xVhGGzOE/225-change-default-branch-to-main">list of apps on the Trello card</a></li>
 </ol>
