--- a/apps/email-alert-api/support-tasks.html
+++ b/apps/email-alert-api/support-tasks.html
@@ -652,6 +652,13 @@
         <div class="app-pane__content toc-open-disabled">
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/197ba798773d71ca1d7d04d9bf32d99e0779485f">20 Oct 2020</a>
 </div>
