--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/governor-of-the-cayman-islands-invites-nominations-for-honours--2">Governor of the Cayman Islands invites nominations for honours</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/locate-switch-off">LOCATE switch-off</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-great-delhi-university-inter-college-debate-2014--2">The GREAT Delhi University inter college debate - 2014</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175441.lt">Paskelbtos pirmos Kompetencijų pusiausvyros peržiūros ataskaitos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179074.pt">Consulado promove GREAT Roadshow de Investimento em Curitiba</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-uae-commit-to-a-closer-relationship-on-transport-cooperation--2">UK &amp; UAE commit to a closer relationship on transport cooperation</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--40">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-in-havana-has-a-vacancy--2">Job opportunities at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-visits-switzerland">Minister for Europe visits Switzerland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/need-consular-services-book-it-online--2">Need Consular services? Book it online</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
