--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/locate-switch-off">LOCATE switch-off</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175313.es-419">Legado de los Juegos Olímpicos de Londres 2012</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/governor-of-the-cayman-islands-invites-nominations-for-honours--2">Governor of the Cayman Islands invites nominations for honours</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-uae-commit-to-a-closer-relationship-on-transport-cooperation--2">UK &amp; UAE commit to a closer relationship on transport cooperation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
